text-align fixes + animation

--- a/src/sass/_contacts-location.scss
+++ b/src/sass/_contacts-location.scss
@@ -64,7 +64,9 @@
   margin-left: 7px;
   fill: currentColor;
 }
-//  <-- Модальные окна -->
+
+
+/*-- Модальные окна --*/
 
 .backdrop {
   position: fixed;
@@ -211,7 +213,7 @@
 .modal__text {
   font-size: 14px;
   line-height: 1.4;
-  text-align: left;
+  text-align: start;
   vertical-align: top;
   margin-bottom: 24px;
 
