--- a/src/sass/_how-made.scss
+++ b/src/sass/_how-made.scss
@@ -233,7 +233,7 @@
   font-size: 14px;
   line-height: 1.4;
   color: $primary-dark;
-  text-align: left;
+  text-align: start;
   @include tablet {
       font-size: 16px;
     }
